test/classes/diten/nilDynamicDispatch.good
nilDynamicDispatch.chpl:16: error: attempt to dereference nil
